# hacker-screen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  BUILDING.md  EFFECTS_CATALOG.md
scripts/: test_binary.py
src/hacker_screen/: __init__.py  __main__.py  data.py  effects.py  matrix_rain.py  sequences.py
src/hacker_screen/assets/: banner.txt  encryption_algos.json  error_messages.json  files.json  hacking_steps.json  ips.json  malware_names.json  network_protocols.json  passwords.json  phase_messages.json  ports.json  signal_profiles.json  success_messages.json  system_info.json  system_processes.json  target_servers.json
src/hacker_screen/assets/skulls/: skull_01.txt  skull_02.txt
tests/: conftest.py  test_data.py  test_effects.py  test_matrix_rain.py  test_sequences.py
